force-app/main/default/objects/MUSW__Automation_Restriction__c/MUSW__Automation_Restriction__c.object-meta.xml
<CustomObject>
    <customHelp>MUSW__HelpInterface</customHelp>
    <description>Automation Results that met filter criteria, but restrict result from applying</description>
    <label>Automation Restriction</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Restriction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Restrictions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>