force-app/main/default/objects/MUSW__Automation_Restriction__c/fields/MUSW__Automation_Result__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Automation_Result__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Automation Result</label>
    <referenceTo>MUSW__Automation_Result__c</referenceTo>
    <relationshipName>Restrictions</relationshipName>
    <type>Lookup</type>
</CustomField>