force-app/main/default/objects/MUSW__Automation_Restriction__c/fields/MUSW__Type__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Record Exist</fullName>
                <default>true</default>
                <label>Record Exist</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>